# vulkan-meson-example

./: .clang-format  .gitignore  README.md  build.ps1  meson.build
scripts/: clean.ps1  update_dependencies.ps1
shaders/: shader.frag  shader.vert
src/: main.cpp
